<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/selectDefinitionsLayout">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView1"
                    android:text="@string/selectState"/>
                <Spinner
                    android:layout_toRightOf="@id/textView1"
                    android:id="@+id/states_spinner"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/states_spinner"
                    android:id="@+id/definitionsTextView"
                    />
                <Button
                    android:layout_below="@id/definitionsTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nextButton"
                    android:id="@+id/nextButton"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/newAllegations">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewWho"
                    android:layout_marginTop="5dp"
                    android:textSize="25dp"
                    android:text="@string/who"/>
                <EditText
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textViewWho"
                    android:id="@+id/whoEditText"
                    android:hint="@string/whoHint"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewWhen"
                    android:layout_below="@+id/textViewWho"
                    android:text="@string/when"
                    android:layout_marginTop="10dp"
                    android:textSize="25dp"/>
                <EditText
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textViewWhen"
                    android:layout_below="@+id/whoEditText"
                    android:id="@+id/whenEditText"
                    android:hint="@string/whenHint"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewWhere"
                    android:layout_below="@+id/textViewWhen"
                    android:layout_marginTop="10dp"
                    android:textSize="25dp"
                    android:text="@string/where"/>
                <EditText
                    android:layout_marginLeft="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/whenEditText"
                    android:layout_toRightOf="@+id/textViewWhere"
                    android:id="@+id/whereEditText"
                    android:hint="@string/whereHint"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewWhere"
                    android:id="@+id/textViewWhat"
                    android:text="@string/what"
                    android:layout_marginTop="10dp"
                    android:textSize="25dp"/>
                <EditText
                    android:layout_marginLeft="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="400dp"
                    android:layout_below="@+id/textViewWhat"
                    android:id="@+id/whatEditText"
                    android:hint="@string/whoHint"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addPhoto"
                    android:layout_below="@+id/whatEditText"
                    android:id="@+id/addPhoto"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/whatEditText"
                    android:layout_toRightOf="@+id/addPhoto"
                    android:id="@+id/addAllegation"
                    android:text="@string/addAllegation"/>
                <GridView
                    android:id="@+id/gridView"
                    android:layout_below="@+id/addPhoto"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dp"
                    android:columnWidth="100dp"
                    android:drawSelectorOnTop="true"
                    android:gravity="center"
                    android:numColumns="auto_fit"
                    android:stretchMode="columnWidth"
                    android:verticalSpacing="5dp"
                    android:focusable="true"
                    android:clickable="true"/>
            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>